# posture-ai

./: .gitignore  README.md  pyproject.toml
config_files/: deadlift.json
src/: check_pose.py  main.py  model.py  utils.py  visualizer.py
