[project]
name = "factory-construction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.0",
    "opencv-python>=4.11.0.86",
    "ruff>=0.9.10",
    "supervision<0.25.0",
    "torch==2.0.1",
    "torchaudio==2.0.2",
    "torchvision==0.15.2",
    "ultralytics>=8.3.82",
]
